feat: add LocationScore MMCR.
- test&docs: LocationScore API feature tests.
