# app/Models/LocationScore.php
@@ -1,0 +1,40 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+class LocationScore extends Model
+{
+    use HasFactory;
+
+    /**
+     * @inheritDoc
+     */
+    protected $fillable = [
+        'user_id',
+        'location_id',
+        'score',
+    ];
+
+    /**
+     * Get the user of the location score.
+     *
+     * @return \Illuminate\Database\Eloquent\Relations\BelongsTo
+     */
+    public function user()
+    {
+        return $this->belongsTo(User::class);
+    }
+
+    /**
+     * Get the location of the location score.
+     *
+     * @return \Illuminate\Database\Eloquent\Relations\BelongsTo
+     */
+    public function location()
+    {
+        return $this->belongsTo(Location::class);
+    }
+}
