# public/docs/openapi.yaml
@@ -48,7 +48,7 @@ paths:
                                 properties:
                                     data: { type: object, example: { name: ['{validation-error-message}'], email: ['{validation-error-message}'], password: ['{validation-error-message}'], device_name: ['{validation-error-message}'] } }
             tags:
-                - '01. Authentication and User'
+                - '01. Authentication and Users'
             requestBody:
                 required: true
                 content:
@@ -119,7 +119,7 @@ paths:
                                 properties:
                                     data: { type: object, example: { email: ['{validation-error-message}'], code: ['{validation-error-message}'] } }
             tags:
-                - '01. Authentication and User'
+                - '01. Authentication and Users'
             requestBody:
                 required: true
                 content:
@@ -180,7 +180,7 @@ paths:
                                 properties:
                                     data: { type: object, example: { email: ['{validation-error-message}'], password: ['{validation-error-message}'], device_name: ['{validation-error-message}'] } }
             tags:
-                - '01. Authentication and User'
+                - '01. Authentication and Users'
             requestBody:
                 required: true
                 content:
@@ -273,7 +273,7 @@ paths:
                                 properties:
                                     data: { type: object, example: { email: ['{validation-error-message}'], password: ['{validation-error-message}'] } }
             tags:
-                - '01. Authentication and User'
+                - '01. Authentication and Users'
             requestBody:
                 required: false
                 content:
@@ -350,7 +350,7 @@ paths:
                                 properties:
                                     data: { type: string, example: Unauthenticated. }
             tags:
-                - '01. Authentication and User'
+                - '01. Authentication and Users'
             requestBody:
                 required: true
                 content:
@@ -462,7 +462,7 @@ paths:
                 - '02. Locations'
             security: []
         post:
-            summary: 'Store a newly created resource in storage.'
+            summary: 'Store a newly created location in storage.'
             description: ''
             parameters:
                 -
@@ -563,7 +563,7 @@ paths:
                                 - phone
     '/api/locations/{location}':
         get:
-            summary: 'Display the specified resource.'
+            summary: 'Display the specified location.'
             description: ''
             parameters:
                 -
@@ -605,7 +605,7 @@ paths:
                 - '02. Locations'
             security: []
         put:
-            summary: 'Update the specified resource in storage.'
+            summary: 'Update the specified location in storage.'
             description: ''
             parameters:
                 -
@@ -729,7 +729,7 @@ paths:
                                 - address
                                 - phone
         delete:
-            summary: 'Remove the specified resource from storage.'
+            summary: 'Remove the specified location from storage.'
             description: ''
             parameters:
                 -
@@ -805,6 +805,170 @@ paths:
                 required: true
                 schema:
                     type: integer
+    /api/location-scores:
+        get:
+            summary: 'Display a listing of the location scores.'
+            description: ''
+            parameters:
+                -
+                    in: query
+                    name: location_id
+                    description: 'The id of the location.'
+                    example: 3
+                    required: false
+                    schema:
+                        type: integer
+                        description: 'The id of the location.'
+                        example: 3
+                -
+                    in: query
+                    name: user_id
+                    description: 'The id of the user.'
+                    example: 31
+                    required: false
+                    schema:
+                        type: integer
+                        description: 'The id of the user.'
+                        example: 31
+                -
+                    in: query
+                    name: limit
+                    description: 'The amount of results per page. Defaults to ''10''.'
+                    example: 10
+                    required: false
+                    schema:
+                        type: integer
+                        description: 'The amount of results per page. Defaults to ''10''.'
+                        example: 10
+                -
+                    in: query
+                    name: page
+                    description: 'The page of the results. Defaults to ''1''.'
+                    example: 1
+                    required: false
+                    schema:
+                        type: integer
+                        description: 'The page of the results. Defaults to ''1''.'
+                        example: 1
+                -
+                    in: header
+                    name: Content-Type
+                    description: ''
+                    example: application/json
+                    schema:
+                        type: string
+                -
+                    in: header
+                    name: Accept
+                    description: ''
+                    example: application/json
+                    schema:
+                        type: string
+            responses:
+                200:
+                    description: '200, when location scores displayed.'
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                example:
+                                    data: [{ user_id: '{user-id}', location_id: '{location-id}', score: '{location-score}' }]
+                                properties:
+                                    data: { type: array, example: [{ user_id: '{user-id}', location_id: '{location-id}', score: '{location-score}' }], items: { type: object } }
+            tags:
+                - '03. LocationScores'
+            security: []
+    '/api/locations/{location}/location-scores':
+        post:
+            summary: 'Store a newly created or update the specified location score in storage, or remove the specified location score from storage.'
+            description: ''
+            parameters:
+                -
+                    in: header
+                    name: Content-Type
+                    description: ''
+                    example: application/json
+                    schema:
+                        type: string
+                -
+                    in: header
+                    name: Accept
+                    description: ''
+                    example: application/json
+                    schema:
+                        type: string
+                -
+                    in: header
+                    name: token
+                    description: ''
+                    example: 'Bearer {personal-access-token}'
+                    schema:
+                        type: string
+            responses:
+                200:
+                    description: '200, when location score created, updated or deleted.'
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                example:
+                                    data: { user_id: '{user-id}', location_id: '{location-id}', score: '{user-location-score}' }
+                                properties:
+                                    data: { type: object, example: { user_id: '{user-id}', location_id: '{location-id}', score: '{user-location-score}' } }
+                404:
+                    description: '404, when location not found.'
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                example:
+                                    data: 'Location(ID:{location-id}) is not found.'
+                                properties:
+                                    data: { type: string, example: 'Location(ID:{location-id}) is not found.' }
+                401:
+                    description: '401, without personal access token.'
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                example:
+                                    data: Unauthenticated.
+                                properties:
+                                    data: { type: string, example: Unauthenticated. }
+                422:
+                    description: '422, when any validation failed.'
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                example:
+                                    data: { score: ['{validation-error-message}'] }
+                                properties:
+                                    data: { type: object, example: { score: ['{validation-error-message}'] } }
+            tags:
+                - '03. LocationScores'
+            requestBody:
+                required: true
+                content:
+                    application/json:
+                        schema:
+                            type: object
+                            properties:
+                                score:
+                                    type: number
+                                    description: 'The location score of the location, <b>0</b> for deleting.'
+                                    example: 3.8
+                            required:
+                                - score
+        parameters:
+            -
+                in: path
+                name: location
+                description: ''
+                example: et
+                required: true
+                schema:
+                    type: string
     /api/posts:
         get:
             summary: 'Display a listing of the posts.'
@@ -870,7 +1034,7 @@ paths:
                                     links: { type: object, example: { first: 'http://ones-blog-api.test/api/locations?category_id=1&cuty=5&page=1', last: 'http://ones-blog-api.test/api/locations?category_id=1&cuty=5&page=1', prev: null, next: null } }
                                     meta: { type: object, example: { current_page: 1, from: 1, last_page: 1, links: [{ url: null, label: pagination.previous, active: false }, { url: 'http://ones-blog-api.test/api/locations?category_id=1&cuty=5&page=1', label: '1', active: true }, { url: null, label: pagination.next, active: false }], path: 'http://ones-blog-api.test/api/locations', per_page: 10, to: 1, total: 1 } }
             tags:
-                - '03. Posts'
+                - '04. Posts'
             security: []
         post:
             summary: 'Store a newly created post in storage.'
@@ -929,7 +1093,7 @@ paths:
                                 properties:
                                     data: { type: object, example: { location_id: ['{validation-error-message}'], title: ['{validation-error-message}'] } }
             tags:
-                - '03. Posts'
+                - '04. Posts'
             requestBody:
                 required: true
                 content:
@@ -1006,7 +1170,7 @@ paths:
                                 properties:
                                     data: { type: string, example: 'Post(ID:{post-id}) is not found.' }
             tags:
-                - '03. Posts'
+                - '04. Posts'
             security: []
         put:
             summary: 'Update the specified post in storage.'
@@ -1075,7 +1239,7 @@ paths:
                                 properties:
                                     data: { type: object, example: { title: ['{validation-error-message}'], published_at: ['{validation-error-message}'], active: ['{validation-error-message}'] } }
             tags:
-                - '03. Posts'
+                - '04. Posts'
             requestBody:
                 required: false
                 content:
@@ -1165,7 +1329,7 @@ paths:
                                 properties:
                                     data: { type: string, example: 'Post(ID:{post-id}) is not found.' }
             tags:
-                - '03. Posts'
+                - '04. Posts'
         parameters:
             -
                 in: path
@@ -1230,7 +1394,7 @@ paths:
                                     links: { type: object, example: { first: 'http://ones-blog-api.test/api/posts/109/comments?page=1', last: 'http://ones-blog-api.test/api/posts/109/comments?page=1', prev: null, next: null } }
                                     meta: { type: object, example: { current_page: 1, from: 1, last_page: 1, links: [{ url: null, label: pagination.previous, active: false }, { url: 'http://ones-blog-api.test/api/posts/109/comments?page=1', label: '1', active: true }, { url: null, label: pagination.next, active: false }], path: 'http://ones-blog-api.test/api/posts/109/comments', per_page: 10, to: 1, total: 1 } }
             tags:
-                - '04. Comments'
+                - '05. Comments'
             security: []
         post:
             summary: 'Store a newly created comment in storage.'
@@ -1299,7 +1463,7 @@ paths:
                                 properties:
                                     data: { type: object, example: { content: ['{validation-error-message}'] } }
             tags:
-                - '04. Comments'
+                - '05. Comments'
             requestBody:
                 required: false
                 content:
@@ -1366,7 +1530,7 @@ paths:
                                 properties:
                                     data: { type: string, example: 'Comment(ID:{comment-id}) is not found.' }
             tags:
-                - '04. Comments'
+                - '05. Comments'
             security: []
         put:
             summary: 'Update the specified comment in storage.'
@@ -1435,7 +1599,7 @@ paths:
                                 properties:
                                     data: { type: object, example: { content: ['{validation-error-message}'] } }
             tags:
-                - '04. Comments'
+                - '05. Comments'
             requestBody:
                 required: true
                 content:
@@ -1515,7 +1679,7 @@ paths:
                                 properties:
                                     data: { type: string, example: 'Comment(ID:{comment-id}) is not found.' }
             tags:
-                - '04. Comments'
+                - '05. Comments'
         parameters:
             -
                 in: path
@@ -1564,7 +1728,7 @@ paths:
                                 properties:
                                     data: { type: array, example: [{ id: '{city-id}', created_at: '{city-created-at}', updated_at: '{city-updated-at}', city: '{city-city}' }], items: { type: object } }
             tags:
-                - '05. Cities'
+                - '06. Cities'
             security: []
     '/api/cities/{city}':
         get:
@@ -1607,7 +1771,7 @@ paths:
                                 properties:
                                     data: { type: string, example: 'City(ID:{city-id}) is not found.' }
             tags:
-                - '05. Cities'
+                - '06. Cities'
             security: []
         parameters:
             -
